20110619 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet "deny
         downstream A15 flag".
20110621 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet "paged via
         IO port" flag.
20110622 accessor.pl,snapshot.c,snap_accessors.txt,szx.c: store core W5100
         state in snapshots.
20110811 libspectrum.h.in,libspectrum.c: add support for detecting POK files
         (patch #3382538) (Sergio Baldoví).
20110905 libspectrum.c,make-perl.c,myglib/garray.c: remove operations with
         uninitialised pointers in libspectrum_make_room, at stopping RZX
         recordings or saving snapshots (part of patch #3404090) (Sergio
         Baldoví).
20111106 rzx.c,szx.c: remove unused variables (thanks, gcc 4.6).
20120203 csw.c: fix less than 0 check on unsigned expression (thanks, clang
         2.1) (Fred).
20120203 szx.c: correct error argument in libspectrum_print_error() calls
         (thanks, clang 2.1) (Fred).
20120220 make-perl.c: advertise that we support bzip2 compressed and wav files
         (part of patch #3413549) (Sergio Baldoví).
20120327 configure.in,Makefile.am,acinclude.m4: simplify detection of GLib
         and drop support for version 1.x (patch #3508792) (Alberto Garcia)
20120327 configure.in: add support for audiofile 0.3.x (patch #3508658) (Alberto
         Garcia).
20120506 make-perl.c,myglib/gslist.c: fix some const qualifiers for the data
         argument to g_slist_remove and g_slist_find_custom (part of bug
         #3514721) (Sergio Baldoví).
20120507 internals.h,libspectrum.c,libspectrum.h.in,make-perl.c,myglib/{ghash.c,
         gslist.c}: add g_hash_table_new_full() and libspectrum_end() for memory
         releasing (part of bug #3515269) (Sergio Baldoví).
20120916 Makefile.am: allow custom build flags for make-perl to address warning
         from the debian build system (bug #3567469) (Sergio Baldoví).
201200928 szx.c: read all possible RAM pages from the snap (thanks, ketmar)
         (Fred).