@@ -1,0 +1,5 @@
+/libtool.m4
+/ltversion.m4
+/lt~obsolete.m4
+/ltoptions.m4
+/ltsugar.m4
